// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expanded depth nested object static given initial level set to 0, should render top 2 levels 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div data-level=\\"0\\">
        <div data-id=\\"3cbab69efa81f\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div role=\\"button\\"></div>
              <div>
                <div data-test=\\"property-name-bar\\">bar</div>
                <span data-test=\\"property-type\\">object</span>
              </div>
            </div>
          </div>
        </div>
        <div data-id=\\"862ab7c3a6663\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div role=\\"button\\"></div>
              <div>
                <div data-test=\\"property-name-foo\\">foo</div>
                <span data-test=\\"property-type\\">array[object]</span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Expanded depth nested object static given initial level set to 1, should render top 3 levels 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div data-level=\\"0\\">
        <div data-id=\\"3cbab69efa81f\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div role=\\"button\\"></div>
              <div>
                <div data-test=\\"property-name-bar\\">bar</div>
                <span data-test=\\"property-type\\">object</span>
              </div>
            </div>
          </div>
        </div>
        <div data-level=\\"1\\">
          <div data-id=\\"12aba6f44026c\\" data-test=\\"schema-row\\">
            <div></div>
            <div>
              <div>
                <div role=\\"button\\"></div>
                <div>
                  <div data-test=\\"property-name-barFoo\\">barFoo</div>
                  <span data-test=\\"property-type\\">object</span>
                </div>
              </div>
            </div>
          </div>
          <div data-id=\\"073ba5acf896f\\" data-test=\\"schema-row\\">
            <div></div>
            <div>
              <div>
                <div>
                  <div data-test=\\"property-name-barBar\\">barBar</div>
                  <span data-test=\\"property-type\\">string</span>
                </div>
              </div>
            </div>
          </div>
          <div data-id=\\"07bba5acf9ef7\\" data-test=\\"schema-row\\">
            <div></div>
            <div>
              <div>
                <div>
                  <div data-test=\\"property-name-barBaz\\">barBaz</div>
                  <span data-test=\\"property-type\\">boolean</span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div data-id=\\"862ab7c3a6663\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div role=\\"button\\"></div>
              <div>
                <div data-test=\\"property-name-foo\\">foo</div>
                <span data-test=\\"property-type\\">array[object]</span>
              </div>
            </div>
          </div>
        </div>
        <div data-level=\\"1\\">
          <div data-id=\\"ae9fe22da9a31\\" data-test=\\"schema-row\\">
            <div></div>
            <div>
              <div>
                <div>
                  <div data-test=\\"property-name-fooBar\\">fooBar</div>
                  <span data-test=\\"property-type\\">string</span>
                </div>
              </div>
            </div>
          </div>
          <div data-id=\\"240fe113d2860\\" data-test=\\"schema-row\\">
            <div></div>
            <div>
              <div>
                <div>
                  <div data-test=\\"property-name-fooFoo\\">fooFoo</div>
                  <span data-test=\\"property-type\\">number</span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`Expanded depth nested object static given initial level set to 2, should render top 4 levels 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div data-level=\\"0\\">
        <div data-id=\\"3cbab69efa81f\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div role=\\"button\\"></div>
              <div>
                <div data-test=\\"property-name-bar\\">bar</div>
                <span data-test=\\"property-type\\">object</span>
              </div>
            </div>
          </div>
        </div>
        <div data-level=\\"1\\">
          <div data-id=\\"12aba6f44026c\\" data-test=\\"schema-row\\">
            <div></div>
            <div>
              <div>
                <div role=\\"button\\"></div>
                <div>
                  <div data-test=\\"property-name-barFoo\\">barFoo</div>
                  <span data-test=\\"property-type\\">object</span>
                </div>
              </div>
            </div>
          </div>
          <div data-level=\\"2\\">
            <div data-id=\\"d768172596c01\\" data-test=\\"schema-row\\">
              <div></div>
              <div>
                <div>
                  <div>
                    <div data-test=\\"property-name-barFooBar\\">barFooBar</div>
                    <span data-test=\\"property-type\\">object</span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div data-id=\\"073ba5acf896f\\" data-test=\\"schema-row\\">
            <div></div>
            <div>
              <div>
                <div>
                  <div data-test=\\"property-name-barBar\\">barBar</div>
                  <span data-test=\\"property-type\\">string</span>
                </div>
              </div>
            </div>
          </div>
          <div data-id=\\"07bba5acf9ef7\\" data-test=\\"schema-row\\">
            <div></div>
            <div>
              <div>
                <div>
                  <div data-test=\\"property-name-barBaz\\">barBaz</div>
                  <span data-test=\\"property-type\\">boolean</span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div data-id=\\"862ab7c3a6663\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div role=\\"button\\"></div>
              <div>
                <div data-test=\\"property-name-foo\\">foo</div>
                <span data-test=\\"property-type\\">array[object]</span>
              </div>
            </div>
          </div>
        </div>
        <div data-level=\\"1\\">
          <div data-id=\\"ae9fe22da9a31\\" data-test=\\"schema-row\\">
            <div></div>
            <div>
              <div>
                <div>
                  <div data-test=\\"property-name-fooBar\\">fooBar</div>
                  <span data-test=\\"property-type\\">string</span>
                </div>
              </div>
            </div>
          </div>
          <div data-id=\\"240fe113d2860\\" data-test=\\"schema-row\\">
            <div></div>
            <div>
              <div>
                <div>
                  <div data-test=\\"property-name-fooFoo\\">fooFoo</div>
                  <span data-test=\\"property-type\\">number</span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given anyOf combiner placed next to allOf given allOf merging enabled, should merge contents of allOf combiners 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div>
        <div aria-label=\\"Pick a type\\" aria-haspopup=\\"true\\" aria-expanded=\\"false\\" id=\\"react-aria-0-2\\">
          Admin
          <div></div>
        </div>
        <div>(any of)</div>
      </div>
      <div data-level=\\"0\\">
        <div data-id=\\"4a8da9be0aedc\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div>
                <div data-test=\\"property-name-type\\">type</div>
                <span data-test=\\"property-type\\">string</span>
              </div>
              <div></div>
              <span data-test=\\"property-required\\">required</span>
            </div>
            <div data-test=\\"property-validation\\">
              <span>Allowed values:</span>
              <div style=\\"gap: 4px\\">
                <span>admin</span>
                <span>editor</span>
              </div>
            </div>
          </div>
        </div>
        <div data-id=\\"e2533efaa39da\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div>
                <div data-test=\\"property-name-enabled\\">enabled</div>
                <span data-test=\\"property-type\\">boolean</span>
              </div>
            </div>
            <div data-test=\\"property-description\\" style=\\"font-size: 12px\\"><p>Is this account enabled</p></div>
          </div>
        </div>
        <div data-id=\\"bd5c934660dce\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div>
                <div data-test=\\"property-name-root\\">root</div>
                <span data-test=\\"property-type\\">boolean</span>
              </div>
            </div>
          </div>
        </div>
        <div data-id=\\"b0aa37b59ceff\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div>
                <div data-test=\\"property-name-group\\">group</div>
                <span data-test=\\"property-type\\">string</span>
              </div>
            </div>
          </div>
        </div>
        <div data-id=\\"b6d786a9b103c\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div>
                <div data-test=\\"property-name-expirationDate\\">expirationDate</div>
                <span data-test=\\"property-type\\">string</span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given array with oneOf containing items, should merge it correctly 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div>
        <div aria-label=\\"Pick a type\\" aria-haspopup=\\"true\\" aria-expanded=\\"false\\" id=\\"react-aria-0-2\\">
          array[string]
          <div></div>
        </div>
        <div>(one of)</div>
      </div>
      <div data-id=\\"b55b1e932485c\\" data-test=\\"schema-row\\">
        <div>
          <div>
            <div><span data-test=\\"property-type\\">array[string]</span></div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given complex type that includes array and complex array subtype, should not ignore subtype 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div data-level=\\"0\\">
        <div data-id=\\"231c8499288a6\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div>
                <div data-test=\\"property-name-items\\">items</div>
                <div>
                  <span data-test=\\"property-type\\">null</span>
                  <span>or</span>
                  <span data-test=\\"property-type\\">array[string or number]</span>
                </div>
              </div>
            </div>
            <div data-test=\\"property-description\\" style=\\"font-size: 12px\\">
              <p>
                This description can be long and should truncate once it reaches the end of the row. If it's not
                truncating then theres and issue that needs to be fixed. Help!
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given multiple object and string type, should process properties 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div data-id=\\"bf8b96e78f11d\\" data-test=\\"schema-row\\">
        <div>
          <div>
            <div role=\\"button\\"></div>
            <div>
              <div>
                <span data-test=\\"property-type\\">string</span>
                <span>or</span>
                <span data-test=\\"property-type\\">object</span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div data-level=\\"0\\">
        <div data-id=\\"2a0059431a56c\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div>
                <div data-test=\\"property-name-ids\\">ids</div>
                <span data-test=\\"property-type\\">array[integer]</span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given oneOf combiner placed next to allOf given allOf merging enabled, should merge contents of allOf combiners 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div>
        <div aria-label=\\"Pick a type\\" aria-haspopup=\\"true\\" aria-expanded=\\"false\\" id=\\"react-aria-0-2\\">
          Admin
          <div></div>
        </div>
        <div>(one of)</div>
      </div>
      <div data-level=\\"0\\">
        <div data-id=\\"4a8da9be0aedc\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div>
                <div data-test=\\"property-name-type\\">type</div>
                <span data-test=\\"property-type\\">string</span>
              </div>
              <div></div>
              <span data-test=\\"property-required\\">required</span>
            </div>
            <div data-test=\\"property-validation\\">
              <span>Allowed values:</span>
              <div style=\\"gap: 4px\\">
                <span>admin</span>
                <span>editor</span>
              </div>
            </div>
          </div>
        </div>
        <div data-id=\\"e2533efaa39da\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div>
                <div data-test=\\"property-name-enabled\\">enabled</div>
                <span data-test=\\"property-type\\">boolean</span>
              </div>
            </div>
            <div data-test=\\"property-description\\" style=\\"font-size: 12px\\"><p>Is this account enabled</p></div>
          </div>
        </div>
        <div data-id=\\"bd5c934660dce\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div>
                <div data-test=\\"property-name-root\\">root</div>
                <span data-test=\\"property-type\\">boolean</span>
              </div>
            </div>
          </div>
        </div>
        <div data-id=\\"b0aa37b59ceff\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div>
                <div data-test=\\"property-name-group\\">group</div>
                <span data-test=\\"property-type\\">string</span>
              </div>
            </div>
          </div>
        </div>
        <div data-id=\\"b6d786a9b103c\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div>
                <div data-test=\\"property-name-expirationDate\\">expirationDate</div>
                <span data-test=\\"property-type\\">string</span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given read mode, should populate proper nodes 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div data-id=\\"bf8b96e78f11d\\" data-test=\\"schema-row\\">
        <div>
          <div>
            <div role=\\"button\\"></div>
            <div>
              <div>
                <span data-test=\\"property-type\\">string</span>
                <span>or</span>
                <span data-test=\\"property-type\\">object</span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div data-level=\\"0\\">
        <div data-id=\\"f19a0161d8b16\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div>
                <div data-test=\\"property-name-id\\">id</div>
                <span data-test=\\"property-type\\">string</span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given standalone mode, should populate proper nodes 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div data-id=\\"bf8b96e78f11d\\" data-test=\\"schema-row\\">
        <div>
          <div>
            <div role=\\"button\\"></div>
            <div>
              <div>
                <span data-test=\\"property-type\\">string</span>
                <span>or</span>
                <span data-test=\\"property-type\\">object</span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div data-level=\\"0\\">
        <div data-id=\\"f19a0161d8b16\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div>
                <div data-test=\\"property-name-id\\">id</div>
                <span data-test=\\"property-type\\">string</span>
              </div>
              <div></div>
              <span data-test=\\"property-read-only\\">read-only</span>
            </div>
          </div>
        </div>
        <div data-id=\\"78328d924d5b6\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div>
                <div data-test=\\"property-name-description\\">description</div>
                <span data-test=\\"property-type\\">string</span>
              </div>
              <div></div>
              <span data-test=\\"property-write-only\\">write-only</span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given visible $ref node, should try to inject the title immediately 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div data-level=\\"0\\">
        <div data-id=\\"862ab7c3a6663\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div role=\\"button\\"></div>
              <div>
                <div data-test=\\"property-name-foo\\">foo</div>
                <span data-test=\\"property-type\\">User</span>
              </div>
            </div>
          </div>
        </div>
        <div data-level=\\"1\\">
          <div data-id=\\"c098fbf9b1d2f\\" data-test=\\"schema-row\\">
            <div></div>
            <div>
              <div>
                <div>
                  <div data-test=\\"property-name-name\\">name</div>
                  <span data-test=\\"property-type\\">string</span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div data-id=\\"621e12cb0db5c\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div role=\\"button\\"></div>
              <div>
                <div data-test=\\"property-name-user\\">user</div>
                <span data-test=\\"property-type\\">User</span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output given write mode, should populate proper nodes 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div data-id=\\"bf8b96e78f11d\\" data-test=\\"schema-row\\">
        <div>
          <div>
            <div role=\\"button\\"></div>
            <div>
              <div>
                <span data-test=\\"property-type\\">string</span>
                <span>or</span>
                <span data-test=\\"property-type\\">object</span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div data-level=\\"0\\">
        <div data-id=\\"78328d924d5b6\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div>
                <div data-test=\\"property-name-description\\">description</div>
                <span data-test=\\"property-type\\">string</span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output top level descriptions should not render top-level description when skipTopLevelDescription=true 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div data-level=\\"0\\">
        <div data-id=\\"862ab7c3a6663\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div>
                <div data-test=\\"property-name-foo\\">foo</div>
                <span data-test=\\"property-type\\">string</span>
              </div>
            </div>
          </div>
        </div>
        <div data-id=\\"3d3ab69efb5e7\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div>
                <div data-test=\\"property-name-baz\\">baz</div>
                <span data-test=\\"property-type\\">string</span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`HTML Output top level descriptions should render top-level description on allOf 1`] = `
"<div class=\\"\\" id=\\"mosaic-provider-react-aria-0-1\\">
  <div data-overlay-container=\\"true\\">
    <div class=\\"JsonSchemaViewer\\">
      <div></div>
      <div data-test=\\"property-description\\" style=\\"font-size: 12px\\">
        <p>This is a description that should be rendered</p>
      </div>
      <div data-level=\\"0\\">
        <div data-id=\\"862ab7c3a6663\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div>
                <div data-test=\\"property-name-foo\\">foo</div>
                <span data-test=\\"property-type\\">string</span>
              </div>
            </div>
          </div>
        </div>
        <div data-id=\\"3d3ab69efb5e7\\" data-test=\\"schema-row\\">
          <div>
            <div>
              <div>
                <div data-test=\\"property-name-baz\\">baz</div>
                <span data-test=\\"property-type\\">string</span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;
